--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,32 @@
+html{
+  height: 100%;
+}
 body {
-  padding: 50px;
+  margin: 0;
+  width: 100%;
+  height: 100%;
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
 }
 
 a {
   color: #00B7FF;
+}
+#imgs{
+  height: 100%;
+  padding: 0 48px;
+}
+.check{
+  text-align: center;
+  color: #0D6EB9;
+  font-size: 40px;
+  padding-top: 60px;
+}
+.icon-down{
+  display: block;
+  margin: 20px auto 0;
+}
+.cover{
+  display: block;
+  width: 100%;
+  margin: 40px auto 0;
 }
